--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,25 +6,28 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #BF5AF2;
+  --ifm-color-primary-dark: #B145ED;
+  --ifm-color-primary-darker: #A536E8;
+  --ifm-color-primary-darkest: #8C1ECF;
+  --ifm-color-primary-light: #CA75F4;
+  --ifm-color-primary-lighter: #D690F7;
+  --ifm-color-primary-lightest: #E3B1FA;
+
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --ifm-font-family-base: 'Inter', sans-serif;
+  --ifm-heading-font-family: 'Poppins', sans-serif;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #DFA9FF;
+  --ifm-color-primary-dark: #D38FFF;
+  --ifm-color-primary-darker: #C875FF;
+  --ifm-color-primary-darkest: #B352F8;
+  --ifm-color-primary-light: #E6BFFF;
+  --ifm-color-primary-lighter: #EED4FF;
+  --ifm-color-primary-lightest: #F6E9FF; 
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
