--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -4,16 +4,22 @@
  */
 
 .heroBanner {
-  padding: 4rem 0;
+  padding: 6rem 0;
   text-align: center;
   position: relative;
   overflow: hidden;
-}
+  background: url('/img/hero-bg.jpg') center/cover no-repeat;
+} 
 
 @media screen and (max-width: 996px) {
   .heroBanner {
     padding: 2rem;
   }
+}
+
+.heroBanner h1,
+.heroBanner p {
+  position: relative; 
 }
 
 .buttons {
